--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -517,7 +517,7 @@ $W:P$, mean wall-to-plan ratio &0.4  \\ \hline
 \end{tabular}
 \end{table}
 
-The 2015 imagery used here for the model domain was 13 years after the 2002 imagery used in \cite{Coutts2007}. An analysis by \cite{Nury2015} of the Darebin Council area (55.6 km$^{2}$) (which includes Preston) was available, developed using aerial imagery from 2009 and LIDAR data from 2008. This was compared because the land surface classification was much improved in terms of accuracy (due to higher quality and higher resolution imagery) than that of \cite{Coutts2007} and provided a more recent set of land surface data (Table \ref{tab:expertValues}). Some differences in the classification were seen, with the Nury (2015) classification showing a lower building fraction and a higher impervious surfaces. Further, some reduction in vegetation cover is seen between the \cite{Coutts2007} classification and the \cite{Nury2015} classification. This introduces a small amount of uncertainly in the exact make-up of the modelling domain and could explain some of the low predictions of Q$_{E}$ seen later in this validation. While the \cite{Nury2015} dataset is at a different scale and from a later time period, it does show very good agreement with the total impervious/pervious fraction of the 500m classification.
+The 2015 imagery used here for the model domain was 13 years after the 2002 imagery used in \cite{Coutts2007}. An analysis by \cite{Nury2015} of the Darebin Council area (55.6 km$^{2}$) (which includes Preston) was available, developed using aerial imagery from 2009 and LIDAR data from 2008. This was compared because the land surface classification was much improved in terms of accuracy (due to higher quality and higher resolution imagery) than that of \cite{Coutts2007} and provided a more recent set of land surface data (Table \ref{tab:expertValues}). Some differences in the classification were seen, with the \cite{Nury2015} classification showing a lower building fraction and a higher impervious surfaces. Further, some reduction in vegetation cover is seen between the \cite{Coutts2007} classification and the \cite{Nury2015} classification. This introduces a small amount of uncertainly in the exact make-up of the modelling domain and could explain some of the low predictions of Q$_{E}$ seen later in this validation. While the \cite{Nury2015} dataset is at a different scale and from a later time period, it does show very good agreement with the total impervious/pervious fraction of the 500m classification.
 
 
 Model parameters were set to the values given in Table \ref{tab:modprvalpara} and domain parameter values in Table \ref{tab:expertValues}. Most of these values are TUF-3D default values, from \cite{Krayenhoff2007}. The modelled domain is a digitisation of the AOI, Oakhill Ave. in Preston (Figure \ref{fig:PrestonModArea}) with building locations and heights as shown in Figure \ref{fig:PrestonBldHt}.
