--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -98,7 +98,7 @@
 \author[monash,crc]{Nigel~Tapper}
 \cortext[cor1]{Principal corresponding author}
 \address[monash]{School of Earth, Atmosphere and Environment, Monash University, Clayton, VIC 3800, Australia}
-\address[crc]{CRC for Water Sensitive Cities, Australia}
+\address[crc]{Cooperative Research Centre for Water Sensitive Cities, Melbourne, Australia}
 
 
 \begin{abstract}
@@ -663,8 +663,11 @@ Development of VTUF-3D was conducted in FORTRAN 2003 \citep{GNU2016a} in Netbean
 
 Model configuration process was developed in Java using the JRE 1.7.0 \citep{Oracle2016} in Eclipse 4.5.2 \citep{Eclipse2016}. Data analysis and graphing scripts were generated in R \citep{R2013} and Python \citep{Python2016} using the Matplotlib library \citep{Hunter2007}. 
 
+\section*{Acknowledgements}
+The support of the Commonwealth of Australia through the Cooperative Research Centre program is acknowledged.
+%\end{acknowledgements}
 
-\section{References}\label{sec:ref}
+\section*{References}\label{sec:ref}
 %% If you have bibdatabase file and want bibtex to generate the
 %% bibitems, please use
 %%
@@ -761,6 +764,10 @@ Specific leaf area (mm$^{2}$kg$^{-1}$)&5.1 &\cite{Mariscal2000}  &25.3 &\cite{Wr
 %
 %\begin{acknowledgements}
 %The work described in this paper was developed during a PhD. project at Monash University. Funding for this was obtailed through the City of Melbourne, Monash University, and the CRC for Water Sensitive Cities.  
+%\end{acknowledgements}
+
+%\begin{acknowledgements}
+%The support of the Commonwealth of Australia through the Cooperative Research Centre program is acknowledged.
 %\end{acknowledgements}
 
 %%%% \section{}
