--- a/library.bib
+++ b/library.bib
@@ -2992,6 +2992,16 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0378112705005396},
 volume = {219},
 year = {2005}
 }
+@article{Domingos2012,
+author = {Domingos, Pedro},
+file = {:home/kerryn/Documents/Work/PhDResearch/GeneralArticles/cacm12.pdf:pdf},
+journal = {Communications of the ACM},
+number = {10},
+pages = {78--87},
+title = {{A Few Useful Things to Know about Machine Learning}},
+volume = {55},
+year = {2012}
+}
 @article{Smirnova1996,
 author = {Smirnova, Tatiana G. and Brown, John M. and Benjamin, Stanley G.},
 file = {:home/kerryn/Documents/Work/PhDResearch/GeneralArticles/Smirnova, Brown, Benjamin - 1996 - Performance of Different Soil Model Configurations in Simulating Ground Surface Temperature and Surface Fluxes - Monthly Weather Review.pdf:pdf},
@@ -4981,6 +4991,15 @@ title = {{Comparison of four methods to estimate urban heat storage}},
 url = {http://journals.ametsoc.org/doi/pdf/10.1175/JAM2432.1},
 volume = {45},
 year = {2006}
+}
+@incollection{LeCun1998a,
+author = {LeCun, Yann and Bottou, Leon and Orr, Genevieve B. and Muller, Klaus-Robert},
+booktitle = {Neural Networks: Tricks of the Trade},
+file = {:home/kerryn/Documents/Work/PhDResearch/GeneralArticles/lecun-98b.pdf:pdf},
+pages = {9--50},
+publisher = {Springer Berlin Heidelberg},
+title = {{Efficient BackProp}},
+year = {1998}
 }
 @article{Brunckhorst2006,
 author = {Brunckhorst, David and Reeve, Ian},
@@ -7014,6 +7033,21 @@ journal = {Journal of Climate},
 title = {{Influence of continental ice retreat on future global climate}},
 url = {http://journals.ametsoc.org/doi/abs/10.1175/JCLI-D-12-00102.1},
 year = {2012}
+}
+@article{LeCun1998,
+archivePrefix = {arXiv},
+arxivId = {1102.0183},
+author = {LeCun, Yann and Bottou, Leon and Bengio, Yoshua and Haffner, Patrick},
+doi = {10.1109/5.726791},
+eprint = {1102.0183},
+file = {:home/kerryn/Documents/Work/PhDResearch/GeneralArticles/lecun-98.pdf:pdf},
+isbn = {0018-9219},
+issn = {00189219},
+journal = {Proc. of the IEEE},
+pages = {1--46},
+pmid = {15823584},
+title = {{Gradient-Based Learning Applied to Document Recognition}},
+year = {1998}
 }
 @article{Oleson2008a,
 author = {Oleson, K. W. and Bonan, G. B. and Feddema, J. and Vertenstein, M. and Grimmond, C. S. B.},
@@ -13988,6 +14022,12 @@ publisher = {Springer},
 title = {{Demystifying Climate Models: A Users Guide to Earth System Models}},
 year = {2016}
 }
+@techreport{Learned-Miller,
+author = {Learned-Miller, Erik},
+file = {:home/kerryn/Documents/Work/PhDResearch/GeneralArticles/vecDerivs.pdf:pdf},
+pages = {1--7},
+title = {{Vector, Matrix, and Tensor Derivatives}}
+}
 @article{Trenberth2002,
 author = {Trenberth, Kevin E. and Karl, Thomas R. and Spence, Thomas W.},
 doi = {10.1175/BAMS-83-11-1593},
@@ -16549,6 +16589,17 @@ file = {:home/kerryn/Documents/Work/PhDResearch/GeneralArticles/Monash Masters/S
 publisher = {Cambridge University Press, Melbourne.},
 title = {{Towards global agreement}},
 year = {2008}
+}
+@article{Baydin2015,
+archivePrefix = {arXiv},
+arxivId = {arXiv:1502.05767v2},
+author = {Baydin, Atilim Gunes and Pearlmutter, Barak A. and Radul, Alexey Andreyevich and Siskind, Jeffrey Mark},
+eprint = {arXiv:1502.05767v2},
+file = {:home/kerryn/Documents/Work/PhDResearch/GeneralArticles/1502.05767v2.pdf:pdf},
+journal = {arXiv.org preprint},
+keywords = {backpropagation,gradient methods,optimization},
+title = {{Automatic differentiation in machine learning: a survey}},
+year = {2015}
 }
 @article{Phillips2008,
 author = {Phillips, CL},
@@ -34066,6 +34117,16 @@ title = {{Modelling the mean velocity profile in the urban canopy layer}},
 url = {http://www.springerlink.com/index/lpj64111q631460t.pdf},
 volume = {97},
 year = {2000}
+}
+@inproceedings{Tang2013,
+archivePrefix = {arXiv},
+arxivId = {arXiv:1306.0239v4},
+author = {Tang, Yichuan},
+booktitle = {International Conference on Machine Learning 2013: Chal- lenges in Representation Learning Workshop. Atlanta, Georgia, USA.},
+eprint = {arXiv:1306.0239v4},
+file = {:home/kerryn/Documents/Work/PhDResearch/GeneralArticles/1306.0239v4.pdf:pdf},
+title = {{Deep Learning using Linear Support Vector Machines}},
+year = {2013}
 }
 @article{Kastner-Klein2004,
 author = {Kastner-Klein, Petra and Rotach, Mathias W.},
