Still on review comments

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -487,7 +487,11 @@ In order to understand the changes made to create VTUF-3D, an overview of the TU
 
 %\nomenclature{$z_{H}$}{mean building height (m)} 
 
-During the model initialisation stage, ray tracing is done (Figure \ref{fig:initray}a) between all surfaces to determine which surfaces are visible to each other. This step reduces the number of radiative interactions of surfaces that will need to be considered throughout the simulation run. Then, as the model runs a simulation, at each timestep, TUF-3D runs a shading routine (Figure \ref{fig:shading}b). In it, the model iterates through each surface in the domain (roads and building walls and roofs) and ray-traces four times from the centre of each quarter of the surface towards the sun. Each surface keeps track of the level of illumination, the shade coefficient for that surface, at each timestep. If the ray passes to the top of the domain without being obstructed (i.e. surface 4) then 0.25 is added to the shade coefficient for that surface. If the ray is obstructed before reaching the top of the domain (i.e. surface 3), then nothing is added. Each surface has potential values of 0, 0.25, 0.5, 0.75 and 1.0. During the later energy balance step, an appropriate amount of incoming radiation is allocated to this surface based on this coefficient.
+The domain initialisation ray tracing routines of TUF-3D have not been modified. In these (Figure \ref{fig:initray}a) unnecessary interactions are determined by finding which surfaces are visible to each other and which pairs of surfaces are fully obstructed by other surfaces and need not be considered in determining radiation exchanges. Then, as the model runs the main simulation, at each timestep, TUF-3D runs a shading routine (Figure \ref{fig:shading}b). In it, the model iterates through each surface in the domain (roads and building walls and roofs), four times from each quarter of the surface, towards the sun to determine that surface's level of illumination, yielding results of 0, 25, 50, 75, and 100\% illuminated. By using these sunlit levels, each surface can be allocated the appropriate amount of incoming shortwave during the energy balance process.
+
+
+
+%During the model initialisation stage, ray tracing is done (Figure \ref{fig:initray}a) between all surfaces to determine which surfaces are visible to each other. This step reduces the number of radiative interactions of surfaces that will need to be considered throughout the simulation run. Then, as the model runs a simulation, at each timestep, TUF-3D runs a shading routine (Figure \ref{fig:shading}b). In it, the model iterates through each surface in the domain (roads and building walls and roofs) and ray-traces four times from the centre of each quarter of the surface towards the sun. Each surface keeps track of the level of illumination, the shade coefficient for that surface, at each timestep. If the ray passes to the top of the domain without being obstructed (i.e. surface 4) then 0.25 is added to the shade coefficient for that surface. If the ray is obstructed before reaching the top of the domain (i.e. surface 3), then nothing is added. Each surface has potential values of 0, 0.25, 0.5, 0.75 and 1.0. During the later energy balance step, an appropriate amount of incoming radiation is allocated to this surface based on this coefficient.
 
 \subsubsection{Integrating vegetation shading and modified ray tracing logic in VTUF-3D}\label{sec:Representationofvegetation}
 
@@ -635,7 +639,7 @@ Another consideration is that the under-prediction of $Q_{E}$ is likely contribu
 
 
 
-There will remain an amount of uncertainty in comparing the modelled results to the observations because of the nature of both. The observations were collected via a flux tower at 40m height, above the height of the urban roughness sublayer. The modelled results are the average of the fluxes from all of the urban surfaces, within the urban canyon and well within the urban roughness sublayer. While these comparisons can be done, i.e. \cite{Grimmond2011}, there remains an amount of uncertainly as they are comparing two slightly different values. However, tests were performed (not presented here) and found the model conserved energy despite different sources of modelled fluxes.
+There will remain an amount of uncertainty in comparing the modelled results to the observations because of inherent uncertainties to both approaches. The observations were collected via a flux tower at 40m height, above the height of the urban roughness sublayer. The modelled results are the average of the fluxes from all of the urban surfaces, within the urban canyon and well within the urban roughness sublayer. While these comparisons can be done, i.e. \cite{Grimmond2011}, there remains an amount of uncertainly as they are comparing two slightly different values. However, tests were performed (not presented here) and found the model conserved energy despite different sources of modelled fluxes.
 
 
 
@@ -692,7 +696,7 @@ This analysis of VTUF-3D performance when comparing predicted results to flux to
 
 VTUF-3D is a unique model involving an innovative tiling approach that accounts for the detailed physiological processes of vegetation. The model incorporates a templated scalable configuration system, used to represent specific types of vegetation, allowing any variety and mix of vegetation to be added to a modelled domain. Also, differential shading functionality allows impacts of urban geometry and inter-tree shading on vegetation anywhere in an urban canyon to be properly modelled. Finally, the addition of mean radiant temperature and UTCI output for all surfaces allows detailed analysis of the impact of vegetation on these important parameters influencing HTC in these areas.
 
-An extensive evaluation process has shown that VTUF-3D is able to accurately model urban areas (including urban vegetation). Now, with the completion and evaluation of the VTUF-3D v1.0 model, there is a suitable tool to model and study in detail the impacts of urban greening on HTC and recommendations and guidelines on how best to best use urban greenery to reduce urban temperatures. Questions can be answered as to the optimal arrangement of canopy cover to give the maximum benefits. Performance of future scenarios can also help inform responses to future challenges, both in terms of urban redesign and planning for emergency responses.
+An extensive evaluation process has shown that VTUF-3D is able to accurately model urban areas (including urban vegetation). Now, with the completion and evaluation of the VTUF-3D v1.0 model, there is a suitable tool to model and study in detail the impacts of urban greening on HTC and recommendations and guidelines on how best to best use urban greenery to reduce urban temperatures. Questions can be answered as to the optimal arrangement of canopy cover to give the maximum benefits. Performance of future scenarios can also help inform responses to future challenges, both in terms of urban redesign and understanding how current urban design responds to extremes.
 
 With VTUF-3D's micro-climate resolution, urban areas can be studied metre by metre and proper mitigation strategies designed for every section of the urban canyon, allowing effort to be focused on areas with the greatest need. VTUF-3D is sufficiently scaled to resolve human level interactions with their surroundings and provide variables to calculate HTC (such as T$_{mrt}$). The built in output of T$_{mrt}$ and UTCI allows examination of these values without requiring addition steps. Finally, with the ability to insert any type of vegetation using physiological and physical vegetation templates, VTUF-3D is applicable to an unlimited number of scenarios and modelling questions. This new model will allow research into a wide variety of urban morphologies, quantifying the benefits of a wide variety of urban arrangements and allow planning for future changes and challenges in climate and urban design.
 
